src/objects/Case_Management_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Profile_One_Page_Profile_for__c</fullName>
        <label>One Page Profile for</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daycare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurising Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Profile_Specify_Other__c</fullName>
        <label>Specify Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_What_is_important_to__c</fullName>
        <label>What is important to</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Profile_What_people_like_admire_about__c</fullName>
        <label>What people like and admire about</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Profile_isValid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>One Page Profile Is Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risk_Backup_Plan_Home__c</fullName>
        <description>Home</description>
        <label>Backup Plan Home</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Emergency_Preparedness__c</fullName>
        <description>Emergency preparedness (natural disasters, power outages, community disasters, etc.)</description>
        <label>Emergency Preparedness</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Errors__c</fullName>
        <label>Risk Errors</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Home__c</fullName>
        <label>Home</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Isvalid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Risk Isvalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risk_Nursing_Care_Plan__c</fullName>
        <description>Does this person have a Nursing Care Plan?</description>
        <label>Does this person have Nursing Care Plan</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Other1__c</fullName>
        <label>Other</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Other2__c</fullName>
        <label>Other</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Preventing_abuse__c</fullName>
        <description>Preventing abuse (physical, emotional, financial, sexual, neglect)</description>
        <label>Preventing abuse</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_What_Happens__c</fullName>
        <description>What happens if the person can’t be reached?  (timelines for notifying others, who to contact, etc.)</description>
        <label>What happens if the person</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Work_School_Day_Supports__c</fullName>
        <label>Work/School/Day Supports</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Work__c</fullName>
        <label>Work</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risktool_Behavior_NA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Risktool Behavior NA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risktool_Financial_NA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Risktool Financial NA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risktool_Health_NA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Risktool Health NA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risktool_Mentalhealth_NA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Risktool Mentalhealth NA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risktool_Safety_NA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Risktool Safety NA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPPC_Chosen_Provider_types__c</fullName>
        <description>Chosen provider type(s) &amp; current rate(s) (PSW, independent contractor, provider organization, general business, etc.)</description>
        <label>Chosen Provider types</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SPPC_End__c</fullName>
        <label>End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SPPC_Errors__c</fullName>
        <label>SPPC Errors</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SPPC_IsValid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SPPC IsValid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPPC_List_Needs_Identified__c</fullName>
        <description>List needs identified by the needs assessment that this service will address</description>
        <label>List Needs Identified</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SPPC_Per_frequency__c</fullName>
        <label>Per (Frequency)</label>
        <picklist>
            <picklistValues>
                <fullName>Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SPPC_Person_Preference__c</fullName>
        <label>Person&apos;s Preference on Service</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SPPC_Same_as_Plan_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same as Plan Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPPC_Section_Not_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SPPC Section Not Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPPC_Service_Code__c</fullName>
        <label>Service Code</label>
        <picklist>
            <picklistValues>
                <fullName>OR502 Personal Care Services</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SPPC_Service_Element__c</fullName>
        <label>Service Element</label>
        <picklist>
            <picklistValues>
                <fullName>49</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>149</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>151</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>145</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SPPC_Start__c</fullName>
        <label>Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SPPC_Unit_Type__c</fullName>
        <label>Unit Type</label>
        <picklist>
            <picklistValues>
                <fullName>Hour(s)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SPPC_Units__c</fullName>
        <label>#Units</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Assignment</label>
        <referenceTo>Service_Assignment__c</referenceTo>
        <relationshipLabel>Case Management Plan</relationshipLabel>
        <relationshipName>Case_Management_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active Final</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive Final</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Waiver_Errors__c</fullName>
        <label>Waiver_Errors</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Waiver_Section_Not_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waiver Section Not Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Waiver_isValid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waiver isValid</label>
        <type>Checkbox</type>
    </fields>
    <label>Case Management Plan</label>
    <nameField>
        <label>Case Management Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Management Plan</pluralLabel>
    <recordTypes>
        <fullName>OR_Combined_ISP</fullName>
        <active>true</active>
        <description>This recordtype is used for OR Combined ISP</description>
        <label>OR Combined ISP</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>